fix: fixed spacing of profiles

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,8 +4,10 @@
     justify-content: center;
     overflow: hidden;
     display: flex;
-    gap: 5px;
+    gap: 18px 30px;
     flex-wrap: wrap;
+
+    margin: 30px;
 }
 
 .p_light_background {
@@ -13,9 +15,6 @@
     width: 280px;
     background-color: var(--cl-light-green);
     border-radius: 25px;
-
-    margin-right: 30px;
-    margin-top: 18px;
 
     position: relative;
     float: left;
